--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -46,7 +46,7 @@ The shelves of large contemporary supermarket are the endpoint of global logisti
 
 The shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, lies at the intersection of these flows, orderings, values and negotiations.  It is an intersectional ordering device that encapsulates a universe of possible references, and a teeming multitude of propensities with an actual local order (in both senses of that term: an ordering and an imperative). As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities to the practicalities of domestic economy.
 
-Hand-written shopping lists undoubtedly have ongoing importance and display interestingly mixed ordering practices (see the montage of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)). But online shopping lists take shape at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Just as the aisles and shelves of a supermarket present a densely-woven semiotics of objects competing for visual attention by offering distinctions of taste, thrift, expedience, novelty, indulgence, health and so forth, online shopping recommender systems generate lists that seek to align people to commodities they otherwise might have little relation to.  
+Hand-written shopping lists undoubtedly have ongoing importance and display interestingly mixed ordering practices (see the montage of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)). But online shopping lists take shape at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Just as the aisles and shelves of a supermarket present a densely-woven semiotics of objects competing for visual attention by offering distinctions of taste, thrift, expedience, novelty, indulgence, health and increasingly, online shopping recommender systems generate lists that seek to align people to commodities they otherwise might have little relation to (see [@Turow_2015] for an overview).  
 
 ```{r random-basket, echo=FALSE, cache=TRUE, fig.cap='Random basket'}
 library(dplyr)
@@ -83,13 +83,13 @@ Hansen's account resonates with wider views of big data.  The expectation energi
 
 >Whatever explanatory and causal value predictive analytics of large datasets have is, I suggest, ultimately rooted in this ontological transformation whereby probabilities are understood to be expressions of the actual propensity of things [@Hansen_2015a, 120] 
 
-Hansen predicates prediction as an 'ontological transformation' that deploys probabilities in an evermore closely woven and encompassing expression of the animated, eventful, propensities of things. Predictive analytics links probabilities as calculations to propensities or the mutable agencies of things. The practical and indeed empirical  question is whether such transformations in probability that bring 'the propensities of things'  can be detected and articulated in the prosaic setting of shopping lists and recommender systems.[^20.1]
+Hansen predicates prediction as an 'ontological transformation' that deploys probabilities in an evermore closely woven and encompassing expression of the animated, eventful, propensities of things. Predictive analytics links probabilities as calculations to propensities or the mutable agencies of things. The practical and indeed empirical  question is whether such transformations or 'conversion' in relations between probabilities and 'the propensities of things'  can be detected and articulated in the prosaic setting of shopping lists and recommender systems.[^20.1]
 
 [^20.1]: I will argue that 'conversion' is a preferable term for these changes.  It highlights  re-orientations in subjects, experience, things, numbers and structures that ranges more widely than Hansen's 'ontological transformation' formulation.
 
 ## Conversion events: DunnHumby's work for Tesco
 
-In one of the many industry-meets-academia events occurring in increasingly data science-oriented higher education institutions in the UK, speakers from industry, government and commerce described their work with predictive models.[^11.1] Shreena Patel, a PhD graduate in statistics and operations research,  works as a data scientist for DunnHumby, a well-known [ customer science company ](https://www.dunnhumby.com/). Her work focuses on online grocery shopping at the supermarket chain Tesco.  Speaking to an audience of statisticians and operations researchers, Patel   focused on the models underlying  shopping list recommendations. Her presentation was filled with graphs, numbers, and tables concerning different aspects of the 'Have you forgotten?' recommender system. Patel's presentation was not sociological. In order to explore the operational environment she described, and its predictive operations, I will reconstruct key features of her presentation using sample data drawn from the Tesco API ([Application Programmer Interface](https://devportal.tescolabs.com/docs/services/56c73b1bf205fd0ed81dbe7a/operations/56d5b2bee2813e0a0053c47c), [@Tesco.com_2017])   and a range of data science, statistics and graphics libraries implemented in the widely-used statistical programming language `R` [@RDevelopmentCoreTeam_2010].
+At one of the many industry-meets-academia events occurring in increasingly data science-oriented higher education institutions in the UK, speakers from industry, government and commerce described their work with predictive models.[^11.1] Shreena Patel, a PhD graduate in statistics and operations research,  works as a data scientist for DunnHumby, a well-known [ customer science company ](https://www.dunnhumby.com/) [@dunnhumby_2017].  Her work at DunnHumby focuses on online grocery shopping at the supermarket chain Tesco.  Speaking to an audience of statisticians and operations researchers, Patel   focused on the development and operation of predictive models underlying  shopping list recommendations. Her presentation was filled with graphs, numbers, and tables concerning ongoing development of the 'Have you forgotten?' recommender system. 
 
 [^11.1]: More than 100  Data Science Institutes have been set up in North America, Europe and UK since around 2012. The traffic between higher education and data analytics in industry is intense and flows in several forms: people funding, research findings, software and technical devices (code) and training. 
 
@@ -106,34 +106,36 @@ g = ggplot(df, aes(x=price,y=ContentsQuantity)) + geom_point(alpha=0.3, size=0.9
 g + ylab('Number of products') + scale_x_log10() + geom_smooth()
 ```
 
-Figure \@ref(fig:simulate-inventory) plots something of the density of commodities in the Tesco grocery database. By virtue of their sheer abundance, the plot cannot easily separate the many items that Tesco sells, especially in the price range £1-£10. A sample of the most highly priced items in Tesco stores is shown in Table  \@ref(tab:expensive-groceries)      
+Like many recommender systems, Patel's models address a large inventory of commodities.  Figure \@ref(fig:simulate-inventory) plots something of the density of commodity prices in the Tesco grocery inventory. By virtue of their sheer abundance, the plot cannot easily separate the many items that Tesco sells, especially in the price range £1-£10. A random sample of the more highly priced items in Tesco stores is shown in Table  \@ref(tab:expensive-groceries)      
 
 ```{r  expensive-groceries, echo=FALSE, cache=TRUE, fig.margin=TRUE}
 s = sample_n(df[df$price>=30,], size=10)
-kable(s[order(s$price), c('name','price')])
+kable(s[order(s$price), c('Label,'Price (£)')])
 ```
 
-Patel's presentation presents two opportunities. First, by recounting, contextualising and commenting on some of the main steps in making the 'Have your forgotten?' list  as a example of the predictive sense-making done by data scientists and customer analytics teams working with transactional data in many commercial settings. Patel mentioned many of these steps only fleetingly in the presentation, for they are largely taken for granted as part of predictive analytic practice. What stands out from the presentation is the normality of the recommender system: it is part of a long-standing and ongoing transformation or conversion of grocey shopping. Second, Patel's explanation of the renovation of a recommender system offered its audience a chance to step into the list-making practices situated at the centre of a mundane situation, grocery shopping.  As a sociological response to a data scientist presenting a model to an audience of statisticians and operations researchers, my interest lies less in specific technical innovations and more on how the ordering work done by recommender systems relates to problems of social order more generally.  The method of reconstruction borrows from the philosopher John Dewey a broad interest in how practical and abstract elements of experience are interwoven [@Dewey_1957]. More concretely, it draws heavily on the vision of 'interface methods' proposed by Noortje Marres [@Marres_2015] in order to keep in view both the highly technical orderings of lists in recommender system and the changes in social orderings they might imply or impel.
+Against the background of the sheer number of commodities and their distribution of prices,  Patel's presentation presents two opportunities. First, by recounting, contextualising and commenting on the main steps in making the 'Have your forgotten?' list, we might follow some of the predictive sense-making done by data scientists and customer analytics teams working with transactional data in a typical commercial setting. Patel mentioned many of these steps only fleetingly in the presentation, for they are largely taken for granted as part of predictive analytic practice. Second, Patel focused on the renovation and updating of long-standing data-mining practice via a much more explicitly 'big data' and 'machine learning' oriented implementation.  What stands out from the presentation is the normality of the recommender system: it is part of a long-standing and ongoing transformation or conversion of grocery shopping. From a sociological standpoint, the interest lies less in specific technical innovations and more on how the ordering work done by recommender systems relates to problems of social order more generally. 
+
+Since Patel was not able to release her presentation slides to a wider audience, I rely on data-driven simulations and statistical programming as ways of reconstructing elements of the recommender system. In order to explore the operational environment she described, and its predictive operations, I model key features of her presentation using sample grocery data drawn from the Tesco API ([Application Programmer Interface](https://devportal.tescolabs.com/docs/services/56c73b1bf205fd0ed81dbe7a/operations/56d5b2bee2813e0a0053c47c), [@Tesco.com_2017])   and a range of data science, statistics and graphics libraries implemented in the widely-used statistical programming language `R` [@RDevelopmentCoreTeam_2010]. At a methodological level, it draws heavily on the vision of 'interface methods' proposed by Noortje Marres [@Marres_2015] in order to keep in view both the highly technical orderings of lists in recommender system and the changes in social orderings they might imply or impel.
 
 ## How the shopping list was reconstituted in the 1990s
 
-The main narrative of Patel's presentation concerned a shift from a well-established demographically-targeted data mining model for making recommendations to a predictive, probabilistic, personally relevant  re-writing of the shopping list in almost-realtime. The changes Patel described are increasingly widespread and common. While they are configured in Tesco-specific ways by DunnHumby (and this reflects a longer history), they are also broadly typical. Tesco is the largest supermarket chain in UK, famous for a customer loyalty and targeted marketing programme known as 'Tesco  Clubcard,' which started in 1991. DunnHumby -- founded by operations researchers Edwina Dunn and Clive Humby -- is said to have convinced the CEO of Tesco sometime in 1991 that a loyalty card program could change the supermarket chain's relationship to its customers.  Clive Humby's academic publications  are hard to track down, but an early paper given at the _Conference of Young Operational Researchers_ in Nottingham in 1984 suggests the direction that he, DunnHumby and later Tesco would take in constructing lists [@OKeefe_1984]. The abstract for Humby's presentation pre-figures an ongoing trajectory for data mining techniques aimed at eliciting detailed information on individual customer preferences.   
+The main narrative of Patel's presentation concerned a shift from a well-established loyalty-card based data-mining model to a predictive, probabilistic, personally relevant re-writing of the shopping list in almost-realtime. The changes Patel described are increasingly widespread and common. While they are configured in Tesco-specific ways by DunnHumby (and this reflects a longer history), they are also broadly typical. Tesco is the largest supermarket chain in UK, famous amongst retailers for its  customer loyalty and targeted marketing programme known as 'Tesco  Clubcard,' which started in 1991. DunnHumby -- founded by operations researchers Edwina Dunn and Clive Humby -- is said to have convinced the CEO of Tesco sometime in 1991 that a loyalty card program could change the supermarket chain's relationship to its customers.  Clive Humby's academic publications  are hard to track down, but an early paper given at the _Conference of Young Operational Researchers_ in Nottingham in 1984 suggests the direction that he, DunnHumby and later Tesco would take in constructing lists [@OKeefe_1984]. The abstract for Humby's presentation pre-figures an ongoing trajectory for data mining techniques aimed at eliciting detailed information on individual customer preferences.   
 
 ![Humby, 1984]( figure/2_humby_young_org_1994.png)
 
-While Tesco  succeeded in data-mining its customers,  and perhaps became the UK's biggest supermarket with the help of data-mining in the 1990s, the online shopping environment  in 2016 is a bit different. It is no longer organised around campaigns involving special offers or redemption of points for demographically segmented customer (DunnHumby made heavy use of UK Census data). It can no longer rely on placement of goods in carefully chosen locations in stores. It needs or at least might want to continuously up-sell and cross-sell to customers who might hardly ever be in the supermarket itself. If 'Tesco is the clear winner in the online grocery market, in fact it takes almost 50p of every £1 spent on food shopping on the internet' [How SEO helps Tesco to dominate the online grocery market](https://econsultancy.com/blog/64841-how-seo-helps-tesco-to-dominate-the-online-grocery-market)[@Silverwood-Cope_2014], then Tesco itself has undergone some kind of conversion?
+While Tesco  succeeded in data-mining its customers using demographic segmentation,  and perhaps became the UK's biggest supermarket with the help of data-mining in the 1990s, the shopping environment  in 2017 is a bit different [@Turow_2017]. It is no longer organised around campaigns involving special offers or redemption of points for demographically segmented loyal customers (DunnHumby made heavy use of UK Census data). It can no longer rely on placement of goods in carefully chosen locations in stores. It needs or at least might want to continuously up-sell and cross-sell to customers who might hardly ever visits the supermarket itself. 
 
-How could we characterise the shift from ClubCard data mining to online grocery markets?  Patel described her work at DunnHumby in terms of a shift in models from a 'rules-based list' to a 'relevancy model.' The relevancy model changed how the 'Have You Forgotten' list was constructed.   This shift is a typical of broader re-organisation of prediction in which existing predictive practices are being re-distributed and intensified in particular ways. The shift in models pivots on a more probabilistic structuring of lists.  The ostensible banality of the 'Have you forgotten?' recommendations betrays micrological signs of a topologically complex predictive infrastructure that subducts people and things in significant ways. 
+How could we characterise the shift from ClubCard data mining to online grocery markets?  If 'Tesco is the clear winner in the online grocery market, in fact it takes almost 50p of every £1 spent on food shopping on the internet' [How SEO helps Tesco to dominate the online grocery market](https://econsultancy.com/blog/64841-how-seo-helps-tesco-to-dominate-the-online-grocery-market)[@Silverwood-Cope_2014], then Tesco itself has undergone some kind of conversion? Patel described her work at DunnHumby as shifting the recommender system from a 'rules-based list' to a 'relevancy model.' The relevancy model changed how the 'Have You Forgotten' list was constructed.   This shift is a typical of broader re-organisation of prediction in which existing data analysis practices are being re-distributed and intensified in particular ways. The shift in models results in a more probabilistic structuring of lists.  The ostensible banality of the 'Have you forgotten?' recommendations betrays micrological signs of a topologically complex predictive infrastructure that constructs alignments between people and things in significant ways. 
 
 ## Reconfiguring recommendations
 
-Academic researchers first began writing about recommender systems in the mid-1990s. They highlighted a potential shift from demographic-driven market research or data mining techniques to personalized recommendations. For instance, writing in 1997 in a special section of the _Communications of the ACM_ on recommender systems, Paul Resnick and Hal Varian (at that time Dean of Information Sciences at UC Berkeley, but currently Chief Economist at Google), made much of this difference [@Resnick_1997]. Resnick and Varian  emphasise the need to distinguish the emerging practices from data mining: 
+Academic researchers first began writing about recommender systems in the mid-1990s. From the outset they highlighted a potential shift from demographic-driven market research or data mining techniques to personalized recommendations. For instance, writing in 1997 in a special section of the _Communications of the ACM_ on recommender systems, Paul Resnick and Hal Varian (at that time Dean of Information Sciences at UC Berkeley, but currently Chief Economist at Google), made much of this personalisation [@Resnick_1997]. Resnick and Varian  emphasise the need to distinguish the emerging practices from data mining: 
 
 > In everyday life, we rely on recommendations from other people. ... Recommender systems augment this natural social process. In a typical recommender  system, people provide recommendations as inputs, which the system then aggregates and directs to appropriate recipients. In some cases the primary transformation is in the aggregation; in others the system’s value lies in its ability to make good matches between the recommenders and those seeking recommendations.[@Resnick_1997,56] 
 
-Writing just after the advent of web-based e-Commerce, Resnick and Varian  imagined recommender systems augmenting the 'collaborative filtering' that people do when they write and read reviews of products and services (for instance, on the travel website, TripAdvisor; [@Scott_2012]). In 1997, two decades ago, Resnick and Varian thought that 'people provide recommendations' and recommender systems would aggregate and rank for recipients. A slightly later review, [@Schafer_2001], diagrams an augmented 'natural social process' with a range of elements, technologies, inputs and outputs, with varying degrees of personalization. 
+Writing just after the advent of web-based e-Commerce, Resnick and Varian  imagined recommender systems augmenting the 'collaborative filtering' that people do when they write and read reviews of products and services (for instance, on the travel website, TripAdvisor; [@Scott_2012]). In 1997,  Resnick and Varian thought that 'people provide recommendations' and recommender systems would aggregate and rank for recipients. A slightly later review, [@Schafer_2001], diagrams an augmented 'natural social process' with a range of elements, technologies, inputs and outputs, with varying degrees of personalization. 
 
-The shift from or conversion of  collaborative filtering appeared in Patel's presentations. Patel describes the move from 'a rules-based system'  to  a 'personal relevance model'. Each term in that phrase -- personal, relevance and model -- has some weight in the conversion work. We can assume that What Patel refers to as  the rule-based system refers  to the `apriori` algorithm, developed  by Rakesh Agrawal and Ramakrishnan Srikanti at IBM Research Alameda in the early 1990s [@Agrawal_1994]. A now-classic approach to 'market basket analysis,' it was listed as one of the top ten data mining algorithms in a survey conducted amongst data miners [@Wu_2008] and usually attracts a chapter in data-mining and some machine learning textbooks (e.g. [@Hastie_2009]). 
+The conversion of  collaborative filtering into predictive personalisation appeared in Patel's presentations. Patel describes the move from 'a rules-based system'  to  a 'personal relevance model'. Each term in that phrase -- personal, relevance and model -- has some weight in the conversion event. We can assume that what Patel describes as  the 'rule-based system' refers  to the `apriori` algorithm, developed  by Rakesh Agrawal and Ramakrishnan Srikanti at IBM Research Alameda in the early 1990s [@Agrawal_1994]. A now-classic approach to 'market basket analysis,' it was listed as one of the top ten data mining algorithms in a survey conducted amongst data miners [@Wu_2008] and usually attracts a chapter in data-mining and machine learning textbooks (e.g. [@Hastie_2009]). 
 
 
 ```{r arules-ex, cache=TRUE, message=FALSE, echo=FALSE, fig.margin=TRUE}
@@ -149,13 +151,13 @@ rules_sorted <- sort(rules, decreasing=TRUE,by="confidence")
 kable(inspect(rules_sorted[1:5]))
 ```
 
-The `apriori` algorithm finds sets of items that commonly occur together in transactions.  These commonly occurring sets are expressed as 'association rules.' For instance, using the `Groceries` dataset in the `R` package `arules,` we can readily see how Walmart *might* have discovered   the fabled association between diapers and beer.[^149.1] Figure \@ref(fig:arules-ex) shows how often common items appear. `Whole milk` appears most frequently.  The `apriori` algorithm attempts to re-structure shopping lists using associations between items frequently bought together.  The association rule-based model for the `Groceries` dataset illustrates some characteristic ordering practices of 1990s-style data-mining approaches to lists (the `Groceries` dataset  was acquired from a 'local German supermarket' [@Hahsler_2006a]). The association between items is expressed in the form of _rules_ not a model. These rules, a term derived from older decision support literature, define sets of associations between items. As the product of a  counting practice, the association rules define sets of items or shopping baskets in terms of decreasing strength. Table \@ref(tab:arules-ex) shows that the first rule has a stronger association than the second. Milk and vegetables is more likely an association than milk and buns.  A rules-based recommender system should, therefore, might put them in that order in the 'Have You Forgotten' list. 
+The `apriori` algorithm finds sets of items that commonly occur together in transactions.  These commonly occurring sets are expressed as 'association rules.' For instance, using the `Groceries` dataset in the `R` package `arules,` we can readily see how Walmart *might* have discovered   the fabled association between diapers and beer.[^149.1] Figure \@ref(fig:arules-ex) shows how often common items appear. `Whole milk` appears most frequently.  The association rule-based model for the `Groceries` dataset illustrates some characteristic ordering practices of 1990s-style data-mining approaches to lists (the `Groceries` dataset  was acquired from a 'local German supermarket' [@Hahsler_2006a]). The association between items is expressed in the form of _rules_ not a model. These rules, a term derived from older decision support literature, define sets of associations between items. Table \@ref(tab:arules-ex) shows that the first rule has a stronger association than the second. Milk and vegetables is more likely an association than milk and buns.  A rules-based recommender system should, therefore, might put them in that order in the 'Have You Forgotten' list. 
 
 [^149.1]: One of the founding narratives of big data customer analytics, the beer-diaper association was not, according to [@Power_2002] found through data mining at all.
 
-While association rules and the `apriori` algorithm present social order in terms of sets of common associations weighted by frequency and hence implicitly by probability, an `apriori`-based recommender system contains no statistical model. It has no grasp on personal relevance since the associations it defines are only between things. Put in terms of the big data conversion, the rules-based system is not predictive. The `apriori` algorithm might be seen as an attempt to grasp the excess of things in a Tesco supermarket by identifying subsets whose closure derives from the associations between things that people construct (through buying habits, by virtue of a shopping list, etc.). In association rules, personhood or experience is irrelevant. The openness of these rules -- the `apriori` algorithm can product any number of rules of diminishing strength -- points towards the propensity of things, but cannot cannot individuate that propensity. 
+Although association rules and the `apriori` algorithm present social order in terms of sets of frequency-weighted associations, an `apriori`-based recommender system contains no statistical model. It also no grasp on personal relevance since the associations it defines are only between things. Put in terms of the big data conversion, the rules-based system is not predictive, or personal. The `apriori` algorithm might be seen as an attempt to grasp the excess of things in a Tesco supermarket by identifying subsets whose closure derives from the associations between things that people construct (through buying habits, by virtue of a shopping list, etc.). In association rules, personhood or experience is irrelevant. The openness of these rules -- the `apriori` algorithm can product any number of rules of diminishing strength -- points towards the propensity of things to find themselves together in shopping baskets, but cannot cannot individuate that propensity beyond demographic quantiles and categories. 
 
-Although data mining for association rules finds relations things, it struggles with the propensity of commodities to multiply. A simple illustration of the combinatorial problem faced by recommender system can be developed using the `Grocery` dataset.  If we take all the items in the `Grocery` dataset and paste them into the 'shopping list' box on the Tesco grocery website, each of the 169 items in the dataset yields dozens and sometimes thousands of products from Tesco online.
+Even if `apriori`  elicits associations between things, it struggles with the propensity of commodities to multiply. A simple illustration of the combinatorial problem faced by recommender system can be developed using the `Grocery` dataset.  If we take all the items in the `Grocery` dataset and paste them into the 'shopping list' box on the Tesco grocery website (or as I side, run them as searches on the TescoLab Product API), each of the 169 items in the dataset yields dozens and sometimes thousands of products from Tesco online.
 
 ```{r tesco-ex, echo=FALSE, cache=TRUE, fig.cap ='Tesco surplus',  fig.margin=TRUE}
     library(ggplot2)
@@ -166,7 +168,7 @@ Although data mining for association rules finds relations things, it struggles 
     ggplot(tesco[tesco$actual>50,], aes(x=labels, y=actual, fill=labels)) +geom_bar(stat='identity') + coord_flip() + ggtitle('Tesco grocery items with more than 50 products') + theme(legend.position="none", axis.text=element_text(size=7))
 ```
 
-Items in the `Groceries` dataset proliferate into a Tesco's list of branded variations. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items (see Figure \@ref(fig:tesco-ex)).  This is, I would suggest, a form of propensity in Hansen's terms, albeit one that occurs in, or very close to, the recommender system rather than  'in the world.' The multiple listed  in the `Grocery` dataset becomes more open in this setting through new impersonal intersections that must be bounded and ordered. The problem that the proliferation of things on the shelves of supermarket or grocery warehouse confronts is partly combinatorial. `r total` products (actually Patel mentioned 200,000 products) can be combined ways. If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible lists. Some of this vast number of possible shopping lists are highly unlikely in terms of typical purchasing patterns, but potentially highly interesting and value as recommendation. 
+Items in the `Groceries` dataset proliferate into a Tesco's list of branded variations. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items (see Figure \@ref(fig:tesco-ex)).  There is, I would suggest, a logistic propensity in things that recommender systems encounter in the ways of global supply chains. The multiple listed  in the `Grocery` dataset becomes more open in this setting through new impersonal intersections that must be bounded and ordered. The proliferation of things on the shelves of supermarket or grocery warehouse confronts produces a combinatorial problem for data miners. `r total` products (actually Patel mentioned 200,000 products) can be combined in a vast number of ways. If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible lists. Some of this vast number of possible shopping lists are highly unlikely in terms of typical purchasing patterns, but potentially valuable as recommendations. 
 
 Amidst this proliferation of possibles multiple, the recommender system  starts to become a site of ordering -- in both senses of that term -- of things and people together in shopping lists. They are less the inscriptions of a discrete agent than an effect of an environment teeming with possible combinations and complementarities, a surplus of associations that the market needs to both maintain and limit. For instance, given that Tesco lists more than 1000 chicken products on its site, how can a customer practically discriminate between chicken products? Patel mentioned that some people log on and go straight to the checkout, allowing the recommender system to supply them with the suggestions that they then move to the shopping basket. A `r total` list of items is quite hard to list let alone read. Going straight to the recommendation list is the predictive equivalent of using an old shopping list and only adding new items when needed. 
 
